--- a/paper/main.tex
+++ b/paper/main.tex
@@ -3,6 +3,8 @@
 % ArXiv-compatible packages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{lmodern}  % Latin Modern fonts with better Unicode support
+\usepackage{textcomp}  % Support for text symbols including em-dash
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
