--- a/paper/sections/02-introduction.tex
+++ b/paper/sections/02-introduction.tex
@@ -6,7 +6,7 @@ In Neal Stephenson's visionary novel \textit{The Diamond Age: Or, A Young Lady's
 
 Educational research consistently confirms what many intuitively understand: we learn best by doing. Hands-on, experiential learning creates neural pathways that are stronger and more enduring than those formed through passive consumption of information \cite{freeman2014active, prince2004active}. Students retain approximately 75\% of what they learn when they practice by doing, compared to just 5-10\% of what they hear in lectures or read in textbooks. Concepts explored through interactive simulation lead to 30-40\% faster mastery than traditional instructional methods alone \cite{wieman2008phet, rutten2012learning}.
 
-Educational simulations embody this hands-on approach by placing students in interactive environments where they can manipulate variables, observe outcomes, test hypotheses, and develop intuitive understanding through direct experience. This transforms abstract concepts into tangible experiences—making invisible forces visible, compressing time to observe long-term effects, and allowing safe experimentation with potentially dangerous or expensive real-world processes.
+Educational simulations embody this hands-on approach by placing students in interactive environments where they can manipulate variables, observe outcomes, test hypotheses, and develop intuitive understanding through direct experience. This transforms abstract concepts into tangible experiences---making invisible forces visible, compressing time to observe long-term effects, and allowing safe experimentation with potentially dangerous or expensive real-world processes.
 
 \subsection{The Challenge: Barriers to Simulation Adoption}
 
@@ -19,14 +19,14 @@ Despite compelling evidence for their effectiveness \cite{dangelo2014simulations
 
 \item \textbf{Platform Dependence}: Many existing simulations are tightly coupled to specific learning management systems or delivery platforms, limiting their reusability and requiring institutions to adopt particular technological ecosystems.
 
-\item \textbf{Inflexibility}: Once created, traditional educational simulations are often "black boxes"—powerful but difficult to modify. If an educator wants to adjust parameters, add features, or adapt content to match specific curriculum needs, they typically lack the ability to do so.
+\item \textbf{Inflexibility}: Once created, traditional educational simulations are often "black boxes"---powerful but difficult to modify. If an educator wants to adjust parameters, add features, or adapt content to match specific curriculum needs, they typically lack the ability to do so.
 
 \item \textbf{Quality Inconsistency}: While some organizations like PhET Interactive Simulations \cite{phet2023} have produced exceptional educational simulations through rigorous research-based development, the broader landscape contains highly variable quality, with many simulations suffering from poor user experience design or pedagogical weaknesses.
 \end{itemize}
 
 \subsection{The Opportunity: Generative AI and Standardization}
 
-Recent advances in generative artificial intelligence present unprecedented opportunities to address these barriers. Large language models like GPT-4 and Claude have demonstrated remarkable capabilities in generating functional code from natural language descriptions. However, successfully applying AI to educational simulation development requires more than raw generative capability—it requires carefully designed frameworks, standardized patterns, and best-practice guidelines that AI systems can reliably implement.
+Recent advances in generative artificial intelligence present unprecedented opportunities to address these barriers. Large language models like GPT-4 and Claude have demonstrated remarkable capabilities in generating functional code from natural language descriptions. However, successfully applying AI to educational simulation development requires more than raw generative capability---it requires carefully designed frameworks, standardized patterns, and best-practice guidelines that AI systems can reliably implement.
 
 This paper introduces \textit{MicroSims}: a comprehensive framework for creating lightweight, interactive educational simulations that occupy a unique position at the intersection of three key characteristics (Figure~\ref{fig:uniqueness}):
 
@@ -45,7 +45,7 @@ This work makes several distinct contributions to the fields of educational tech
 
 \item \textbf{AI-Compatible Standardization}: We demonstrate how carefully structured design patterns and coding conventions enable generative AI systems to create pedagogically sound, functionally correct educational simulations from natural language descriptions. This represents a novel approach to leveraging AI for educational content creation.
 
-\item \textbf{Universal Embedding Architecture}: We show how iframe-based distribution combined with width-responsive design enables a single simulation to work seamlessly across learning management systems, interactive textbooks, mobile devices, and other digital learning environments—without requiring platform-specific versions or complex integration protocols.
+\item \textbf{Universal Embedding Architecture}: We show how iframe-based distribution combined with width-responsive design enables a single simulation to work seamlessly across learning management systems, interactive textbooks, mobile devices, and other digital learning environments---without requiring platform-specific versions or complex integration protocols.
 
 \item \textbf{Metadata and Discovery System}: We present a metadata framework based on Dublin Core standards specifically tailored for AI-generated educational simulations, supporting discovery, personalization, learning analytics, and integration with adaptive learning systems.
 
