--- a/paper/sections/05-design-framework.tex
+++ b/paper/sections/05-design-framework.tex
@@ -21,7 +21,7 @@ Accessibility considerations are integrated throughout the MicroSims design fram
 
 The accessibility framework includes specific provisions for screen reader compatibility, with standardized \texttt{describe()} function implementations that provide comprehensive textual descriptions of simulation content and interactions. These descriptions are automatically generated during the setup phase and dynamically updated as simulation states change, ensuring that users relying on assistive technology receive equivalent information to visual users.
 
-Motor accessibility considerations include minimum touch target sizes of 44×44 pixels for mobile interfaces, adequate spacing between interactive elements, and support for alternative input methods. The framework accommodates users who may have difficulty with precise pointer control by implementing forgiving interaction zones and providing alternative interaction methods where appropriate.
+Motor accessibility considerations include minimum touch target sizes of 44 by 44 pixels for mobile interfaces, adequate spacing between interactive elements, and support for alternative input methods. The framework accommodates users who may have difficulty with precise pointer control by implementing forgiving interaction zones and providing alternative interaction methods where appropriate.
 
 \subsubsection{Standards-Based Development}
 
