--- a/paper/sections/07-metadata.tex
+++ b/paper/sections/07-metadata.tex
@@ -19,7 +19,7 @@ The MicroSims metadata framework employs a layered approach that builds upon est
 
 \subsubsection{Dublin Core Foundation}
 
-At its foundation, the metadata schema incorporates Dublin Core metadata standards—internationally recognized elements for describing digital resources. This ensures compatibility with existing educational repositories and library systems while providing essential information for resource management and discovery. The Dublin Core elements integrated into the MicroSims framework include:
+At its foundation, the metadata schema incorporates Dublin Core metadata standards---internationally recognized elements for describing digital resources. This ensures compatibility with existing educational repositories and library systems while providing essential information for resource management and discovery. The Dublin Core elements integrated into the MicroSims framework include:
 
 \textbf{Core Elements}: Title, creator, subject, description, publisher, date, type, format, identifier, language, relation, coverage, and rights provide the fundamental cataloging information required for institutional repositories and library systems.
 
