--- a/paper/sections/09-expected-benefits.tex
+++ b/paper/sections/09-expected-benefits.tex
@@ -50,7 +50,7 @@ Classroom observations reveal a distinctive interaction pattern: students often 
 
 \subsubsection{The Critical Role of Scaffolding}
 
-The level of instructional guidance accompanying simulations significantly influences the depth and quality of student engagement. Research comparing different activity structures reveals that both extremes—highly prescriptive step-by-step procedures and completely unguided free exploration—produce suboptimal learning outcomes \cite{phet2023}.
+The level of instructional guidance accompanying simulations significantly influences the depth and quality of student engagement. Research comparing different activity structures reveals that both extremes---highly prescriptive step-by-step procedures and completely unguided free exploration---produce suboptimal learning outcomes \cite{phet2023}.
 
 Overly structured activities that specify every action and observation lead to shallow, procedure-following behavior where students complete tasks without developing genuine conceptual understanding. Students in such contexts often focus on obtaining the "correct answer" rather than exploring the underlying phenomena or constructing their own understanding.
 
@@ -64,7 +64,7 @@ This balanced scaffolding approach encourages self-directed inquiry where studen
 
 Classroom implementations frequently position simulations as collaborative activities where students work in pairs or small groups. This social configuration promotes productive peer discussion as students debate predictions, explain observations to one another, and collectively make sense of simulation behaviors. The collaborative context transforms individual cognitive engagement into social knowledge construction, with students challenging each other's misconceptions and collectively building more sophisticated understanding.
 
-The simulations' visual, dynamic nature provides a shared referent for group discussion—students can point to specific elements on screen, propose interpretations of what they observe, and negotiate meaning through dialogue anchored in their common perceptual experience. This shared visual reference appears to scaffold productive scientific argumentation even among younger learners who might struggle with purely verbal scientific discourse.
+The simulations' visual, dynamic nature provides a shared referent for group discussion---students can point to specific elements on screen, propose interpretations of what they observe, and negotiate meaning through dialogue anchored in their common perceptual experience. This shared visual reference appears to scaffold productive scientific argumentation even among younger learners who might struggle with purely verbal scientific discourse.
 
 \subsubsection{Safe Experimentation and Risk-Taking}
 
@@ -82,7 +82,7 @@ One of the most significant advantages of well-designed interactive simulations 
 
 Research demonstrates that even young learners aged 10-12 can benefit substantially from appropriately designed simulations. In one longitudinal study, fifth and sixth grade students used an ecosystem simulation over multiple class sessions and demonstrated "considerable improvements" in systems thinking skills, including understanding of ecological processes and interactions \cite{eric2009}. This evidence challenges assumptions that complex system modeling exceeds young learners' capacities, suggesting instead that well-designed simulations can scaffold sophisticated thinking even in elementary contexts.
 
-Effective simulations for this age group employ simpler interfaces, more scaffolding guidance, and contexts tied to students' everyday experiences. Visual design typically employs cartoon-style graphics and anthropomorphized representations that appeal to younger learners while maintaining scientific accuracy. The content focus remains on foundational concepts presented through familiar scenarios—for example, exploring food webs through animals students recognize, or investigating basic physics through playground equipment simulations.
+Effective simulations for this age group employ simpler interfaces, more scaffolding guidance, and contexts tied to students' everyday experiences. Visual design typically employs cartoon-style graphics and anthropomorphized representations that appeal to younger learners while maintaining scientific accuracy. The content focus remains on foundational concepts presented through familiar scenarios---for example, exploring food webs through animals students recognize, or investigating basic physics through playground equipment simulations.
 
 Despite the relative scarcity of research on elementary-level simulation use, existing evidence suggests substantial potential impact. As one systematic review noted, this scarcity represents a significant gap and opportunity: developing more MicroSims targeting K-5 curriculum standards could yield considerable benefits, particularly for schools lacking hands-on science resources \cite{mdpi2024}.
 
@@ -104,7 +104,7 @@ At the college and university level, simulations support sophisticated conceptua
 
 For more advanced courses, simulations enable exploration of phenomena that would require specialized, expensive equipment (such as quantum mechanical systems or high-energy particle interactions) or dangerous procedures (such as chemical reactions involving hazardous materials). Graduate-level simulations may incorporate research-grade models and extensive parameter customization, blurring the boundary between educational tools and research instruments.
 
-\textbf{Summary Across Levels}: While specific implementations vary by educational level, several core benefits remain consistent across all age groups: simulations make learning interactive and visual, provide immediate feedback, enable safe experimentation, and transform abstract concepts into manipulable experiences. The primary differences involve interface complexity, conceptual sophistication, and the degree of instructional scaffolding provided. This developmental continuity suggests that establishing simulation literacy early—through elementary and middle school experiences—prepares students to leverage increasingly sophisticated simulation-based learning as they advance through their education.
+\textbf{Summary Across Levels}: While specific implementations vary by educational level, several core benefits remain consistent across all age groups: simulations make learning interactive and visual, provide immediate feedback, enable safe experimentation, and transform abstract concepts into manipulable experiences. The primary differences involve interface complexity, conceptual sophistication, and the degree of instructional scaffolding provided. This developmental continuity suggests that establishing simulation literacy early---through elementary and middle school experiences---prepares students to leverage increasingly sophisticated simulation-based learning as they advance through their education.
 
 \subsection{Common Characteristics of Effective MicroSims}
 
@@ -112,17 +112,17 @@ Research on simulation effectiveness identifies several key design characteristi
 
 \textbf{Intuitive, Student-Friendly Interfaces}: Effective simulations employ clean visual designs, minimal text requirements, and familiar metaphors that enable students to begin productive exploration without extensive instruction. Controls utilize standard interaction paradigms (dragging, sliding, clicking) and respond instantly, creating smooth dialogues between student actions and simulation feedback \cite{phet2023}. Intuitive design minimizes extraneous cognitive load, allowing learners to focus mental resources on scientific content rather than interface navigation.
 
-\textbf{Familiar Contexts and Analogies}: The most pedagogically effective simulations depict scenarios or objects that students recognize from everyday experience: bicycles, balloons, magnets, kitchen utensils. This contextualization in familiar situations helps students activate relevant prior knowledge and form connections between scientific principles and lived experience \cite{phet2023}. Analogies embedded within simulations—such as modeling electric current flow using water flow—further aid conceptual understanding by connecting unfamiliar scientific phenomena to more intuitive physical systems.
+\textbf{Familiar Contexts and Analogies}: The most pedagogically effective simulations depict scenarios or objects that students recognize from everyday experience: bicycles, balloons, magnets, kitchen utensils. This contextualization in familiar situations helps students activate relevant prior knowledge and form connections between scientific principles and lived experience \cite{phet2023}. Analogies embedded within simulations---such as modeling electric current flow using water flow---further aid conceptual understanding by connecting unfamiliar scientific phenomena to more intuitive physical systems.
 
 \textbf{Making the Invisible Visible}: Perhaps the most distinctive pedagogical affordance of interactive simulations is their capacity to visualize normally invisible processes. Effective simulations render visible the phenomena students must understand but cannot directly observe: electrons moving through circuits, molecules colliding during chemical reactions, magnetic fields extending through space, quantum wave functions evolving over time \cite{phet2023, finkelstein2005phet}.
 
-Many high-quality simulations provide multiple linked representations—for example, showing both a macroscopic view of a chemical reaction and a molecular-level animation simultaneously, or coordinating a physical simulation with real-time graphical plots of relevant variables. These coordinated representations help students construct connections between different levels of analysis and develop more integrated understanding \cite{phet2023}.
+Many high-quality simulations provide multiple linked representations---for example, showing both a macroscopic view of a chemical reaction and a molecular-level animation simultaneously, or coordinating a physical simulation with real-time graphical plots of relevant variables. These coordinated representations help students construct connections between different levels of analysis and develop more integrated understanding \cite{phet2023}.
 
 \textbf{Interactive and Responsive Feedback}: High-quality simulations provide immediate, dynamic responses to every student action. When learners adjust a slider, add an object, or change a parameter value, the simulation responds instantly with animated changes, updated graphs, and modified outcomes. This immediacy reinforces cause-and-effect relationships and supports learning through exploration and experimentation \cite{phet2023}.
 
-Effective simulations also incorporate productive constraints—boundaries on possible actions that focus attention on scientifically relevant phenomena without overtly prescribing student behavior. For example, a circuit simulation might physically prevent impossible connections while allowing all valid circuit configurations, subtly guiding students toward productive exploration without explicitly instructing them what to try.
+Effective simulations also incorporate productive constraints---boundaries on possible actions that focus attention on scientifically relevant phenomena without overtly prescribing student behavior. For example, a circuit simulation might physically prevent impossible connections while allowing all valid circuit configurations, subtly guiding students toward productive exploration without explicitly instructing them what to try.
 
-\textbf{Appropriate Challenge and Scaffolding}: The most effective simulations achieve a careful balance between ease of use and intellectual challenge. They often include implicit puzzles or goal-oriented tasks—such as achieving a stable orbit in a gravity simulation or lighting a bulb with limited circuit components—that spark curiosity and motivate exploration \cite{phet2023}.
+\textbf{Appropriate Challenge and Scaffolding}: The most effective simulations achieve a careful balance between ease of use and intellectual challenge. They often include implicit puzzles or goal-oriented tasks---such as achieving a stable orbit in a gravity simulation or lighting a bulb with limited circuit components---that spark curiosity and motivate exploration \cite{phet2023}.
 
 Simultaneously, simulations must remain accessible through intuitive controls and clear visual feedback that prevent frustration. Many successful simulations accompany their open-ended design with optional hints, guiding questions, or progressive complexity levels that provide scaffolding for struggling students while remaining unobtrusive for those who prefer independent exploration.
 
@@ -148,7 +148,7 @@ Future development priorities in this category include simulations for advanced 
 
 Chemistry simulations possess unique power to transport students into the molecular realm, making visible the atomic and molecular processes underlying macroscopic chemical phenomena. High-impact examples address chemical bonding, reaction mechanisms, equilibria, gas laws, solutions and pH, and atomic structure \cite{phet2023}.
 
-Effective chemistry simulations typically feature multiple coordinated representations: molecular animations showing individual particles alongside macroscopic views and graphical plots of concentration, energy, or other relevant variables. These linked representations help students construct connections between molecular behaviors and observable chemical properties—a notoriously difficult conceptual leap in chemistry education \cite{phet2023}.
+Effective chemistry simulations typically feature multiple coordinated representations: molecular animations showing individual particles alongside macroscopic views and graphical plots of concentration, energy, or other relevant variables. These linked representations help students construct connections between molecular behaviors and observable chemical properties---a notoriously difficult conceptual leap in chemistry education \cite{phet2023}.
 
 Chemistry simulations also provide virtual laboratory environments for experiments that would be dangerous, expensive, or time-consuming with physical materials. Students can explore reaction kinetics by instantly adjusting temperature or try numerous reactant combinations without safety concerns or material costs. The ability to observe molecular collision dynamics and reaction mechanisms provides insights impossible to achieve through physical laboratory work.
 
@@ -158,13 +158,13 @@ Research indicates that molecular-level simulations effectively address common m
 
 In biological sciences, simulations model processes occurring within organisms and ecosystems, often involving time scales and spatial scales difficult to observe directly. Cell and molecular biology simulations addressing gene expression, cellular respiration, and protein synthesis enable students to manipulate biological pathways and observe consequences, supporting understanding of complex biochemical sequences \cite{mdpi2024}.
 
-Human anatomy and physiology simulations provide interactive models of body systems—circulatory, nervous, digestive—that are more ethical and often more informative than traditional dissection while remaining highly engaging for students. The ability to highlight specific components, show invisible processes like nerve signal transmission, and manipulate physiological parameters provides learning experiences impossible through physical specimens.
+Human anatomy and physiology simulations provide interactive models of body systems---circulatory, nervous, digestive---that are more ethical and often more informative than traditional dissection while remaining highly engaging for students. The ability to highlight specific components, show invisible processes like nerve signal transmission, and manipulate physiological parameters provides learning experiences impossible through physical specimens.
 
 At larger scales, ecology and environmental science simulations model population dynamics, predator-prey relationships, disease transmission, and climate systems. These simulations allow students to experiment with ecological parameters and observe long-term consequences in accelerated time, promoting systems thinking by revealing how changes in one system component cascade through interconnected networks \cite{eric2009}.
 
 One elementary-level study using an ecosystem simulation found substantial improvements in students' systems thinking skills, including understanding of processes, interactions, and ecological relationships. However, the study also identified persistent difficulties with feedback loops and cyclical causation, suggesting that further simulation design innovation is needed to effectively scaffold understanding of these complex system dynamics \cite{eric2009}.
 
-Biology simulations prove particularly engaging because they connect to personally relevant topics—health, environment, organisms students encounter—and often incorporate game-like scenarios such as maintaining ecological balance or preventing disease outbreaks. Expanding simulation resources for genetics, evolution, microbiology, and complex ecosystem modeling represents a high-priority development area likely to yield significant educational impact.
+Biology simulations prove particularly engaging because they connect to personally relevant topics---health, environment, organisms students encounter---and often incorporate game-like scenarios such as maintaining ecological balance or preventing disease outbreaks. Expanding simulation resources for genetics, evolution, microbiology, and complex ecosystem modeling represents a high-priority development area likely to yield significant educational impact.
 
 \subsubsection{Mathematics and Computational Thinking}
 
@@ -188,7 +188,7 @@ Research with ecosystem simulations for middle school students demonstrated impr
 
 High-impact systems simulations effectively visualize flows of conserved quantities (energy, matter, money, population) and accumulate changes over time through graphical displays. They encourage what-if analysis, positioning students as decision-makers exploring policy consequences: "What happens if we increase recycling rates by 50\%? What if we introduce a new predator species?"
 
-Causal loop diagrams, stock-and-flow models, and system dynamics simulations help students recognize circular causation, time delays, and system equilibria—essential concepts for understanding global challenges involving climate, resources, public health, and social systems. Given the importance of systems thinking for addressing complex real-world problems, continued development of accessible, pedagogically effective simulations in this category represents a high-priority investment likely to yield substantial educational and societal returns.
+Causal loop diagrams, stock-and-flow models, and system dynamics simulations help students recognize circular causation, time delays, and system equilibria---essential concepts for understanding global challenges involving climate, resources, public health, and social systems. Given the importance of systems thinking for addressing complex real-world problems, continued development of accessible, pedagogically effective simulations in this category represents a high-priority investment likely to yield substantial educational and societal returns.
 
 \subsection{Subject Areas Requiring Specialized Supporting Libraries}
 
@@ -208,7 +208,7 @@ Circuit education presents unique challenges requiring specialized component lib
 
 \textbf{Circuit Schematic Components}: A comprehensive p5.js circuit drawing library providing standard electrical components (resistors, capacitors, batteries, switches, transistors) with appropriate connection logic would enable rapid development of circuit-focused MicroSims. Such a library should handle component placement, connection validation, and visual rendering while exposing circuit state for educational visualization.
 
-\textbf{Current Animation}: Animating electron flow or current direction provides crucial visual feedback for understanding circuit behavior. A supporting library providing current animation capabilities—showing moving charges, indicating direction, and responding to circuit modifications—would substantially enhance circuit simulation pedagogical effectiveness.
+\textbf{Current Animation}: Animating electron flow or current direction provides crucial visual feedback for understanding circuit behavior. A supporting library providing current animation capabilities---showing moving charges, indicating direction, and responding to circuit modifications---would substantially enhance circuit simulation pedagogical effectiveness.
 
 \textbf{Signal Processing}: Related applications in signal processing, communications, and electrical engineering would benefit from libraries supporting waveform visualization, frequency analysis, and filter design. Enabling students to interactively explore Fourier analysis, modulation schemes, or digital signal processing through well-designed simulations could significantly improve accessibility of these mathematically intensive topics.
 
@@ -238,12 +238,12 @@ Despite their demonstrated effectiveness, educational simulations face several i
 
 The MicroSims framework envisions simulations not as isolated educational resources but as integrated components of intelligent, adaptive learning systems. An intelligent textbook system demonstrates how simulations can function within broader educational ecosystems to provide personalized, data-driven learning experiences.
 
-\textbf{Adaptive Content Sequencing}: An intelligent textbook incorporating MicroSims continuously assesses student understanding through interaction patterns, simulation performance, and embedded assessment items. Based on this ongoing evaluation, the system adaptively sequences content—determining when students have sufficiently mastered prerequisites to advance, when additional practice through simulation exploration would benefit learning, or when remediation through alternative representations might address persistent misconceptions.
+\textbf{Adaptive Content Sequencing}: An intelligent textbook incorporating MicroSims continuously assesses student understanding through interaction patterns, simulation performance, and embedded assessment items. Based on this ongoing evaluation, the system adaptively sequences content---determining when students have sufficiently mastered prerequisites to advance, when additional practice through simulation exploration would benefit learning, or when remediation through alternative representations might address persistent misconceptions.
 
 \textbf{Personalized Simulation Selection}: Rather than presenting identical content to all students, an intelligent textbook can select from libraries of related simulations targeting the same concepts at different complexity levels or through different contextual framings. A student struggling with abstract mathematical representations might receive a simulation emphasizing concrete, everyday contexts, while an advanced student might encounter more sophisticated parameter spaces and quantitative analysis tasks.
 
-\textbf{Learning Analytics and Feedback Loops}: Comprehensive logging of student interactions with embedded simulations—including time spent, parameters explored, challenges attempted, and errors made—provides rich data for learning analytics. Intelligent systems analyze these data streams to identify struggling students requiring intervention, recognize common misconceptions requiring instructional attention, and refine content recommendations based on observed effectiveness patterns.
+\textbf{Learning Analytics and Feedback Loops}: Comprehensive logging of student interactions with embedded simulations---including time spent, parameters explored, challenges attempted, and errors made---provides rich data for learning analytics. Intelligent systems analyze these data streams to identify struggling students requiring intervention, recognize common misconceptions requiring instructional attention, and refine content recommendations based on observed effectiveness patterns.
 
 \textbf{Integration with Reinforcement Learning}: Advanced implementations might employ reinforcement learning algorithms that treat simulation selection and sequencing as optimization problems: the system learns through trial and error which combinations of simulations, scaffolding levels, and timing produce optimal learning outcomes for different student profiles. Over time, such systems become increasingly effective at personalizing educational experiences as they accumulate data about what works for whom under what circumstances.
 
-This vision of intelligent textbook integration positions MicroSims as essential building blocks for next-generation adaptive learning systems—systems that combine the engagement and interactivity of simulations with the personalization and continuous improvement capabilities of AI-driven education technology.
+This vision of intelligent textbook integration positions MicroSims as essential building blocks for next-generation adaptive learning systems---systems that combine the engagement and interactivity of simulations with the personalization and continuous improvement capabilities of AI-driven education technology.
